--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -6,7 +6,7 @@
 }
 
 ::-moz-selection {
-  
+  /* change selection here */
   background-color: #f80;
   color: #000;
 }
@@ -147,6 +147,9 @@ div.album
   display: grid;
   -ms-grid-columns: (minmax(250px, 1fr))[auto-fill];
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 40px;
 }
 
@@ -159,6 +162,13 @@ div.album
 .album > .container > .wrpr > .card {
   overflow: hidden;
   border-radius: 15px;
+}
+
+@media (max-width: 767px) {
+  .album > .container > .wrpr > .card {
+    width: 300px;
+    margin: auto;
+  }
 }
 
 .album > .container > .wrpr > .card > .image {
@@ -314,20 +324,25 @@ header .container-large > .wrpr nav > ul.main-nav > li:not([id="mega"]) {
   overflow: hidden;
 }
 
-header .container-large > .wrpr nav > ul.main-nav > li:not([id="mega"]) > a::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  bottom: -20px;
-  height: 5px;
-  background-color: #000;
-  left: 0;
-  -webkit-transition: top,  bottom  0.2s ease;
-  transition: top,  bottom  0.2s ease;
-}
-
-header .container-large > .wrpr nav > ul.main-nav > li > a:hover::after {
-  bottom: 0px;
+@media (min-width: 767px) {
+  header .container-large > .wrpr nav > ul.main-nav > li:not([id="mega"]) > a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    bottom: -20px;
+    height: 5px;
+    background-color: #000;
+    left: 0;
+    -webkit-transition: top, 
+ bottom 
+ 0.2s ease;
+    transition: top, 
+ bottom 
+ 0.2s ease;
+  }
+  header .container-large > .wrpr nav > ul.main-nav > li > a:hover::after {
+    bottom: 0px;
+  }
 }
 
 header .container-large > .wrpr nav > ul.main-nav > li#mega {
@@ -436,9 +451,6 @@ header .container-large > .wrpr > .bars {
             order: 2;
     margin: 20px 0 10px;
   }
-  header .container-large > .wrpr > .bars:hover ~ .pill-search > input {
-    width: calc(100vw - 80px);
-  }
   header .container-large > .wrpr > .bars:hover ~ nav {
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
@@ -476,6 +488,7 @@ header .container-large > .wrpr > .bars {
 header .container-large > .wrpr .pill-search {
   margin-left: 10px;
   position: relative;
+  border-radius: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -490,7 +503,8 @@ header .container-large > .wrpr .pill-search {
 @media (max-width: 767px) {
   header .container-large > .wrpr .pill-search {
     display: none;
-    width: calc(100vw - 100px);
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
   }
 }
 
@@ -529,7 +543,8 @@ header .container-large > .wrpr .pill-search input[type="text"] {
 
 @media (max-width: 767px) {
   header .container-large > .wrpr .pill-search input[type="text"] {
-    width: 50px;
+    margin: auto;
+    width: 100%;
   }
 }
 
@@ -540,14 +555,7 @@ header .container-large > .wrpr .pill-search input[type="text"] + .results {
 header .container-large > .wrpr .pill-search input[type="text"]:focus {
   outline: none;
   border: 2px solid #000;
-  width: 350px;
-}
-
-@media (max-width: 767px) {
-  header .container-large > .wrpr .pill-search input[type="text"]:focus {
-    margin: auto;
-    width: calc(100vw - 100px);
-  }
+  width: 150px;
 }
 
 header .container-large > .wrpr .pill-search input[type="text"]:focus ~ .results {
