--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -1247,7 +1247,7 @@ body {
 }
 
 .join-us .wrpr .container form > input[type="submit"] {
-  margin-left: -125px;
+  margin-top: 20px;
   background-color: #4a5;
   color: #fff;
   padding: 15px;
